--- a/webgis_flutter/web/index.html
+++ b/webgis_flutter/web/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <script src='https://unpkg.com/maplibre-gl@^4.3/dist/maplibre-gl.js'></script>
-  <link href='https://unpkg.com/maplibre-gl@^4.3/dist/maplibre-gl.css'
-        rel='stylesheet'/>
+  <link href='https://unpkg.com/maplibre-gl@^4.3/dist/maplibre-gl.css' rel='stylesheet'/>
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
